<resources>
    <string name="app_name" translatable="false">WeatherTastic</string>
    <string name="hello">Hello</string>
    <string name="caution">Caution</string>
    <string name="alertMessage1">Do you want to delete this item?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="errorLocation">No Location Error</string>
    <string name="locationMessage">Kindly enable Location to use Application properly</string>
    <string name="getPermission">Get Permission</string>
    <string name="ignore">Ignore</string>
    <string name="NetworkError">Network Error</string>
    <string name="NetworkMessage">Kindly enable internet for first time to launch properly</string>
    <string name="Exit">Exit</string>
    <string name="language">Choose Language</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="home">Home</string>
    <string name="favourite">Favourite</string>
    <string name="alarm">Alarm</string>
    <string name="change_language">Change Language</string>
    <string name="change_units">Change Units</string>
    <string name="units">Choose Unit</string>
    <string name="rain">Rain</string>
    <string name="temp">Temperature</string>
    <string name="wind">Wind</string>
    <string name="fog">Fog/Mist/Haze</string>
    <string name="snow">Snow</string>
    <string name="cloudiness">Cloudiness</string>
    <string name="thunderstorm">Thunderstorm</string>
    <string name="empty"></string>
    <string name="anytime">Anytime</string>
    <string name="periodOfTime">Period Of Time</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="weekend">Kindly choose at least one day</string>
    <string name="alertType">Kindly choose Alert type</string>
    <string name="time">Kindly choose from and to time</string>
    <string name="alarmOff">Alarm OFF</string>
    <string name="alarmOn">Alarm ON</string>
    <string name="checkEvent">Check Event At</string>
    <string name="hour24">24 Hour</string>
    <string name="hour48">48 Hour</string>
    <string name="hour72">72 Hour</string>
    <string name="cautionTime">Kindly choose time to check event at</string>
    <string name="max">More than</string>
    <string name="min">Less than</string>
    <string name="threshold">required value</string>
    <string name="forcastHours">Hourly</string>
    <string name="forcastDaily">Daily</string>
    <string name="sunRiseSet">Sunrise and Sunset</string>
    <string name="meterSec">m/sec</string>
    <string name="mileHr">mile/hr</string>
    <string name="chooseDAy">Choose Alarm Day(s)</string>
    <string name="alarmType">Alarm Type</string>
    <string name="rainUnit">mm</string>
    <string name="checkMore">Check more than</string>
    <string name="checkLess">check less than</string>
    <string name="deleteAlarm">Kindly stop Alarm before deleting</string>


    <string-array name="alertTypes">
        <item>@string/empty</item>
        <item>@string/rain</item>
        <item>@string/temp</item>
        <item>@string/wind</item>
        <item>@string/fog</item>
        <item>@string/snow</item>
        <item>@string/cloudiness</item>
        <item>@string/thunderstorm</item>
    </string-array>


</resources>