<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AddAlarmFragment"
    android:backgroundTint="#00000000">

    <ca.antonious.materialdaypicker.MaterialDayPicker
        android:id="@+id/day_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <org.angmarch.views.NiceSpinner
        android:id="@+id/nice_spinner"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="28dp"
        android:backgroundTint="@color/teal_700"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/day_picker"/>

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nice_spinner"
        android:visibility="gone">


        <RadioButton
            android:id="@+id/anytimeRB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/anytime" />

        <RadioButton
            android:id="@+id/periodOfTimeRB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/periodOfTime" />

    </RadioGroup>


    <RadioGroup
        android:id="@+id/radioGroupMaxMin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nice_spinner"
        app:layout_constraintVertical_bias="0.06"
        app:layout_constraintHorizontal_bias="0.8">

        <RadioButton
            android:id="@+id/minRB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/min" />

        <RadioButton
            android:id="@+id/maxRB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/max" />

    </RadioGroup>

    <EditText
        android:id="@+id/valueET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/threshold"
        android:inputType="numberDecimal"
        android:selectAllOnFocus="false"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.858"
        app:layout_constraintStart_toEndOf="@+id/fromTimeTV"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupMaxMin"
        app:layout_constraintVertical_bias="0.167"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/fromTimeTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="--:--"
        android:textSize="20sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.115"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        app:layout_constraintVertical_bias="0.127"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/toTimeTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="--:--"
        android:textSize="20sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/fromTimeTV"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        app:layout_constraintVertical_bias="0.236"
        tools:visibility="visible" />

    <Button
        android:id="@+id/saveBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/day_picker"
        app:layout_constraintVertical_bias="0.901" />


</androidx.constraintlayout.widget.ConstraintLayout>