<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/HomeConstraintLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.sofakingforever.stars.AnimatedStarsView
                android:id="@+id/stars_white"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="@+id/linearLayout1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:starsView_bigStarThreshold="20dp"
                app:starsView_maxStarSize="10dp"
                app:starsView_meteoritesColors="@array/meteorites_colors"
                app:starsView_meteoritesEnabled="true"
                app:starsView_meteoritesInterval="1000"
                app:starsView_minStarSize="1dp"
                app:starsView_starColors="@array/star_colors_small"
                app:starsView_starCount="70" />


            <com.sofakingforever.stars.AnimatedStarsView
                android:id="@+id/stars"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="@+id/linearLayout1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:starsView_bigStarThreshold="8dp"
                app:starsView_maxStarSize="16dp"
                app:starsView_meteoritesEnabled="false"
                app:starsView_minStarSize="8dp"
                app:starsView_starColors="@array/star_colors_big"
                app:starsView_starCount="10" />

            <include
                android:id="@+id/main_card"
                layout="@layout/weather_item"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginTop="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/linearLayout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/main_card">

                <TextView
                    android:id="@+id/seprator1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:fontFamily="@font/sanchez"
                    android:text="@string/forcastHours" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/hourly_recycler"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/seprator2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:fontFamily="@font/sanchez"
                    android:text="@string/forcastDaily" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/daily_recycler"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <View
                android:id="@+id/view1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:background="@android:color/darker_gray"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout1"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/seprator3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:fontFamily="@font/sanchez"
                android:text="@string/wind"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/view1" />


            <com.github.ahmadnemati.wind.WindView
                android:id="@+id/windview"
                android:layout_width="match_parent"
                android:layout_height="106dp"
                app:barometerTickSpacing="9dp"
                app:bigPoleX="38dp"
                app:labelFontSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/seprator3"
                app:numericFontSize="25sp"
                app:poleBottomY="98dp"
                app:pressureLineY="73dp"
                app:pressureTextX="12dp"
                app:pressureTextY="4dp"
                app:smallPoleX="75dp"
                app:windTextX="10dp"
                app:windTextY="29dp" />

            <View
                android:id="@+id/view2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:background="@android:color/darker_gray"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/windview"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/seprator4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:fontFamily="@font/sanchez"
                android:text="@string/sunRiseSet"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/view2" />

            <View
                android:id="@+id/view3"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:background="@android:color/darker_gray"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/seprator4"
                app:layout_constraintVertical_bias="0.0" />

            <com.github.tianma8023.ssv.SunriseSunsetView
                android:id="@+id/ssv"
                android:layout_width="match_parent"
                android:layout_height="69dp"
                android:layout_margin="10dp"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.496"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/view3"
                app:ssv_label_horizontal_offset="50dp"
                app:ssv_label_text_color="@color/colorPrimary"
                app:ssv_label_text_size="15sp"
                app:ssv_label_vertical_offset="10dp"
                app:ssv_shadow_color="@color/black"
                app:ssv_sun_color="@color/teal_700"
                app:ssv_sun_radius="5dp"
                app:ssv_track_color="@color/teal_200"
                app:ssv_track_width="1.5dp"
                android:layout_marginBottom="20dp"/>

            <View
                android:id="@+id/view4"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="2dp"
                android:background="@android:color/darker_gray"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ssv"
                app:layout_constraintVertical_bias="0.0" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>